# split_sub

./: README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  wsgi.py
split/: forms.py  split_subs.py  urls.py  views.py
split/templates/: index.html
split/tests/: test_logic.py
split_sub/: settings.py  urls.py  wsgi.py
src/: app.py  forms.py  split_subs.py
src/templates/: index.html
