[tool.poetry]
name = "split-subs"
version = "0.1.0"
description = ""
authors = ["konstantin kudryavtsev <ibelkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
